--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 ~java com.xmlcalabash.drivers.Main --version~
 
 ** Logging Dependency
-On Debian stable, add Java logging library jar files (e.g. ~slf4j-nop-2.0.13.jar~, including ~slf4j-api-2.0.13.jar~) to ~$CLASSPATH~:
+On Debian stable, add Java logging library jar files (e.g. ~slf4j-simple-1.7.36.jar~) to ~$CLASSPATH~:
 
 #+begin_src sh
 export CLASSPATH=$HOME/my-files/blog/java/calabash/xmlcalabash-1.5.7-120/lib/*.jar:$HOME/my-files/blog/java/calabash/xmlcalabash-1.5.7-120/xmlcalabash-1.5.7-120.jar
