--- a/pages/posts/2023-01-15-blog.org
+++ b/pages/posts/2023-01-15-blog.org
@@ -85,7 +85,7 @@ This post stems from further explorations of the "lowercase" [[cite:batchelorLow
 #+end_quote
 
 ** Quarantine Composition
-In this post I have collected and pieced together different sounds heard during my recent travel to Taiwan and quarantine just north of Taipei. The motivation for this (and future sound blogs), is to improve my understanding of phonography informed soundscape composition, involving minimal editing of field recordings [[cite:truaxSoundscapeCompositionGlobal2008][cite:truaxSoundscapeCompositionGlobal2008]]. This is in addition to improving my skills in composition, field recording and digital audio workstations in general. To facilitate this, I established some arbitrary ground rules to guide this process, involving namely tools and techniques used. Firstly, I only use sounds recorded by me, and secondly, I limited palette of digital effects to an equaliser, compressor, pitch shifter and reverb [fn:1]. Lastly, as this is a blog post, I decided to set a hard limit of five minutes for the final composition. While looped, samples were not "played" via plugins (or MIDI sequencers), rather I sought to maintain any original flow in the recordings. I used layering liberally to enhance this, all the while trying to keep in mind the original context and recognisability of the sounds. Although still reminiscent of a consolidation of "soundscape holiday slides" [[cite:dreverSoundscapeCompositionConvergence2002][cite:dreverSoundscapeCompositionConvergence2002]], this is an area that I nevertheless hope to develop further.
+In this post I have collected and pieced together different sounds heard during my recent travel to Taiwan and quarantine just north of Taipei. The motivation for this (and future sound blogs), is to improve my understanding of phonography informed soundscape composition, involving minimal editing of field recordings [[cite:truaxSoundscapeCompositionGlobal2008][cite:truaxSoundscapeCompositionGlobal2008]]. This is in addition to improving my skills in composition, field recording and digital audio workstations in general. To facilitate this, I established some arbitrary ground rules to guide this process, involving namely tools and techniques used. Firstly, I only use sounds recorded by me, and secondly, I limited palette of digital effects to an equaliser, compressor, pitch shifter and reverb. Lastly, as this is a blog post, I decided to set a hard limit of five minutes for the final composition. While looped, samples were not "played" via plugins (or MIDI sequencers), rather I sought to maintain any original flow in the recordings. I used layering liberally to enhance this, all the while trying to keep in mind the original context and recognisability of the sounds. Although still reminiscent of a consolidation of "soundscape holiday slides" [[cite:dreverSoundscapeCompositionConvergence2002][cite:dreverSoundscapeCompositionConvergence2002]], this is an area that I nevertheless hope to develop further.
 
 #+begin_quote
 🎧 Listen (with visualisation): [[https://ilmarikoria.xyz/static/quarantine-composition.webm][ilmarikoria.xyz/quarantine-composition]]
@@ -107,8 +107,6 @@ In this post, I have explored some of the subtleties of sounds arising and heard
 
 [fn:1] Equipment used: Zoom H5 + [[https://micbooster.com/clippy-and-pluggy-microphones/99-xlr-stereo-clippy-em272-microphone.html][2x Clippy XLR EM272]] (mics ~25cm apart).
 
-[fn:2] http://www.inbetweennoise.com/
+[fn:2] [[http://www.inbetweennoise.com/][http://www.inbetweennoise.com/]]
 
 [fn:3] Zoom H5 and [[https://soundman.de/][Soundman OKM II binaural microphones.]]
-
-
