[posts] remove bullets

--- a/pages/posts/2022-06-05-blog.org
+++ b/pages/posts/2022-06-05-blog.org
@@ -3,8 +3,9 @@
 #+description: Report on academic talk in environmental humanities.
 #+date: 2022-06-05
 
-- *Talk Title*: 平等間的不平等：台灣漢族佛教徒與泰雅族獵人之間（不）可通約的存有論協商 Inequality of Equalities: The Negotiation of the (In)Commensurable Ontologies of Han Buddhists and Atayal Hunters in Taiwan
-- *Date/Location*: 2022/04/13, National Yang Ming Chiao Tung University (Hsinchu, Taiwan) [[[https://ilmarikoria/static/nicolaisen.jpeg][Original flyer]]]
+*Talk Title*: 平等間的不平等：台灣漢族佛教徒與泰雅族獵人之間（不）可通約的存有論協商 Inequality of Equalities: The Negotiation of the (In)Commensurable Ontologies of Han Buddhists and Atayal Hunters in Taiwan
+
+*Date/Location*: 2022/04/13, National Yang Ming Chiao Tung University (Hsinchu, Taiwan)
 
 * Introduction
 In our current state of environmental change and decline in species diversity worldwide, we must re-contextualise our relationships with our surroundings and co-inhabitants. Within this lies the need to interrogate existing cultural constructions of "equality" that permeate law, religion and politics, especially considering the interests of non-human animals. Presenting at National Yang Ming Chiao Tung University 國立陽明交通大學 (Hsinchu, Taiwan), environmental humanist Jeffrey Nicolaisen 倪杰 suggests alternatives to positions regarding animal rights and the equality of species. Through multi-disciplinary efforts intersecting religious studies, law and ethnography, he firstly demonstrates the plurality of attitudes towards inter-species relations in Taiwan. He then suggests adopting an "equality of life" 生命平等, as an alternative to current anthropocentrisms, based on Western legal standards and liberal humanism. Rich in analysis and detail, the talk situates itself at the centre of discussions surrounding our current global ecological disaster. And offers viable alternative future pathways that take into account the well-being of all life on Earth. This event report seeks to firstly present a succinct account of the talk in question, describing its contents and conclusions with broad detail. Additionally, this work contains a brief discussion and question section further summarising and fleshing out the points made above. Due to space considerations, this report emphasises some details over others. Therefore, I invite readers to consult the pre-recorded lectures in [[https://www.youtube.com/watch?v=hMUo1PS1PIQ][Mandarin]] and [[https://www.youtube.com/watch?v=LY9afNm2Cac][English]], and Jeffrey Nicolaisen's published works on the subject. 
