--- a/pages/other-pages/index.org
+++ b/pages/other-pages/index.org
@@ -1,6 +1,6 @@
 #+title: About
 
-Hello! My name is Ilmari. This blog is simply for me to share my interests in software, sound and zen.
+Hello! My name is Ilmari. This (work in progress) blog is simply for me to share my interests in software, sound and zen.
 
 Feel free to contact me via [[mailto:ilmarikoria@posteo.net][ilmarikoria@posteo.net]].
 
