[bib] adjust entries

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -8,7 +8,8 @@
   doi = {10.5920/beyondairports.06},
   url = {https://unipress.hud.ac.uk/plugins/books/19/chapter/26}
 }
-
+                  
+                  
 @incollection{andersonIntroductionBeautyJoy2022,
   title = {An Introduction to the Beauty and Joy of Computing for Theological Librarians},
   booktitle = {Digital Humanities and Libraries and Archives in Religious Studies},
@@ -246,10 +247,10 @@
 }
 
 @book{chenFanbaiFanBaiChinese2010,
-  title = Fanbai  梵唄: Chinese Buddhist monastic chants,
+  title = {Fanbai  梵唄: Chinese Buddhist monastic chants},
   author = {Chen, Pi-Yen},
   year = {2010},
-  series = Recent researches in the oral traditions of music,
+  series = {Recent researches in the oral traditions of music},
   number = {8},
   publisher = {A-R Editions, Inc},
   address = {Middleton}
@@ -292,7 +293,7 @@
   title = {Sounds from Dangerous Places},
   author = {Cusack, Peter},
   year = {2012},
-  publisher = ReR Megacorp and Berliner Kunstlerprogramm des DAAD,
+  publisher = {ReR Megacorp and Berliner Kunstlerprogramm des DAAD},
   address = {Thornton Heath},
   note = {DAAD LC-02677}
 }
@@ -381,7 +382,7 @@
 
 @misc{djsniffEpPsi112011,
   title = {Ep. Psi 11.02},
-  author = {Sniff, {\relax DJ,
+  author = {Sniff, DJ},
   year = {2011},
   note = {Compact Disc.}
 }
@@ -479,9 +480,9 @@
   author = {Eisenberg, Andrew J},
   editor = {Novak, David and Sakakeeny, Matt},
   year = {2015},
-  pages = {193--207},
+  pages = {193-207},
   publisher = {Duke University Press},
-  address = {Durham ; London}
+  address = {London}
 }
 
 @incollection{feldAcoustemology2015,
@@ -693,7 +694,7 @@
   title = {Religion},
   booktitle = {Keywords in Sound},
   author = {Hirschkind, Charles},
-  editor = {Novak, David and {Sakakeeny,
+  editor = {Novak, David and Sakakeeny},
   year = {2015},
   pages = {165--174},
   publisher = {Duke University Press},
@@ -1127,7 +1128,7 @@
 }
 
 @book{powellRecordTungshan1986,
-  title = The record of Tung-shan,
+  title = {The record of Tung-shan},
   author = {Powell, William F.},
   year = {1986},
   publisher = {University of Hawai'i Press},
@@ -1523,7 +1524,7 @@
 
 @book{yanghsuan-chihRecordBuddhistMonasteries1984,
   title = {A Record of Buddhist Monasteries in Lo-yang},
-  author = Yang Hsüan-chih,
+  author = {Yang Hsüan-chih},
   year = {1984},
   publisher = {Princeton University Press},
   address = {Princeton},
