[org] remove latex

--- a/posts/2022-01-30-blog.org
+++ b/posts/2022-01-30-blog.org
@@ -4,7 +4,7 @@
 #+date: 2022-01-30
 
 * Introduction
-Over the past couple of days I have been toying with the idea of formally continuing my academic studies and writing a PhD dissertation. As I have using "[[https://orgmode.org/][org-mode]]" for a little while now, I was curious about setting it up for an extended humanities project [fn:1]. Briefly, org-mode is an extension for  the multipurpose software [[https://www.gnu.org/software/emacs/][GNU Emacs]], based around plain text markup. Among other features, it hosts a convenient way to write and outline text, that one can then export to other intermediary formats, such as @@html:<span class="latex">L<span class="a">A</span><span class="tex">T<span class="e">E</span>X</span></span>@@. Additionally, it is a powerful productivity tool for activity planning and scheduling (including to-do lists and an agenda), all in plain text[fn:2]. While it can be a useful way to write extensive prose documents, its use is not too apparent within the Arts and Humanities academic community. The purpose of this post is therefore to explore my experiences with GNU Emacs and org-mode, within the backdrop of humanities writing tasks. This includes sharing some of the my own choices in terms of setup, with appropriate addons for, for example, reference management and note taking [fn:3].
+Over the past couple of days I have been toying with the idea of formally continuing my academic studies and writing a PhD dissertation. As I have using "[[https://orgmode.org/][org-mode]]" for a little while now, I was curious about setting it up for an extended humanities project [fn:1]. Briefly, org-mode is an extension for  the multipurpose software [[https://www.gnu.org/software/emacs/][GNU Emacs]], based around plain text markup. Among other features, it hosts a convenient way to write and outline text, that one can then export to other intermediary formats, such as Latex. Additionally, it is a powerful productivity tool for activity planning and scheduling (including to-do lists and an agenda), all in plain text[fn:2]. While it can be a useful way to write extensive prose documents, its use is not too apparent within the Arts and Humanities academic community. The purpose of this post is therefore to explore my experiences with GNU Emacs and org-mode, within the backdrop of humanities writing tasks. This includes sharing some of the my own choices in terms of setup, with appropriate addons for, for example, reference management and note taking [fn:3].
 
 * Regarding GNU Emacs
 Regarding GNU Emacs, it is mainly associated with the software development and systems administration world, but I have come across configurations for humanities research as well. In my area of interest this includes, for example, Christian Wittern's /[[https://github.com/mandoku/mandoku][Mandoku]]/, designed for research into pre-modern Chinese texts [[cite:witternDigitalTextsPractice2020][cite:witternDigitalTextsPractice2020]]. Briefly, Mandoku hosts a suite of tools for philological analysis, translation and annotation of primary literature. And it includes integration to [[http://www.kanripo.org/][Kanseki Repository]], an online database of texts in computer readable format compiled by Wittern and his team. Other related examples include that of Jay Dixit, a New York based science writer, who has honed his GNU Emacs configuration for professional writing tasks [[cite:thoughtbotEmacsWriters2015][cite:thoughtbotEmacsWriters2015]]. Through his demonstration, Dixit displays the modularity of the software beyond its applicability in computing and Unix administration. Lastly, one can find further related examples within the GNU Emacs "emacs-humanities" [[https://lists.gnu.org/mailman/listinfo/emacs-humanities][mailing-list]], and its [[https://lists.gnu.org/archive/html/emacs-humanities/][archives]].
