--- a/lib/tex/resume-header.tex
+++ b/lib/tex/resume-header.tex
@@ -69,7 +69,7 @@
 
 %% set heading spacing
 \titlespacing*{\section}{0em}{0em}{0em} %%% left, above, below
-\titlespacing*{\subsection}{0em}{4.5em}{1em}
+\titlespacing*{\subsection}{0em}{4em}{1em}
 \titlespacing*{\subsubsection}{0em}{1.5em}{0em}
 
 %% typeset lists
@@ -101,10 +101,4 @@
 \renewcommand{\rubysize}{0.4}
 \renewcommand{\rubysep}{0.25ex}
 
-%% environment for expanded header part
-\newenvironment{greynote}{%
-  \footnotesize
-  \color{gray}
-  \hypersetup{linkcolor=gray, urlcolor=gray, citecolor=gray}
-}{}
-
+\usepackage{tabularx}
