[sch] init schematron

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -134,7 +134,7 @@
 
 @article{bielefeldtTreasuryEyeTrue2009,
   title = {Treasury of the Eye of the True Dharma, Book 46: The Insentient Preach the Dharma  Mujō Seppō)},
-  author = {Bielefeldt, Carl},
+  author = {Bielefeldt Carl},
   year = {2009},
   journal = {Dharma Eye},
   volume = {27},
@@ -144,7 +144,7 @@
 
 @article{bielefeldtTreasuryTrueDharma2013,
   title = {Treasury of the True Dharma Eye, Book 25: Sound of the Stream, Form of the Mountain  Keisei Sanshoku)},
-  author = {Bielefeldt, Carl},
+  author = {Bielefeldt Carl},
   year = {2013},
   journal = {Dharma Eye},
   volume = {31},
@@ -1045,7 +1045,7 @@
   title = {Sansuikyō},
   booktitle = {The Mountains and Waters Sūtra: A Practitioner's Guide to Dōgen's Sansuikyō},
   editor = {Okumura, Shohaku},
-  translator = {Bielefeldt, Carl},
+  translator = {Bielefeldt Carl},
   year = {2018},
   publisher = {Wisdom Publications},
   address = {Somerville},
